<resources>
    <string name="app_name">CrimeBit</string>
    <string name="button_Victim">Victim</string>
    <string name="button_Police">Police</string>
    <string name="Heading">Login Page</string>
    <string name="editTextName">Username</string>
    <string name="editTextPassword">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="textViewInfo">No Of Attempts Remaining:5</string>
    <string name="button_FileComplaint">File a Complaint</string>
    <string name="button_Filedcomplaint">Complaints Filed</string>
    <string name="button_Complaintstatus">Complaint Status</string>
    <string name="title_activity_police_main_page">Police_main_page</string>
</resources>
